<resources>
    <string name="app_name">ATutor</string>
    <string name="lesson_description">Lección</string>
    <string name="abrir_lección">Abrir lección</string>
    <string name="search_here">buscar aqui...</string>

    <string-array name="Concept_names">
        <item>Activity</item>
        <item>Intent</item>
        <item>Dalvik</item>
        <item>Gradle</item>
        <item>JDK</item>
        <item>Android Studio</item>
        <item>Concept 1</item>
        <item>Concept 2</item>
        <item>Concept 3</item>
        <item>Concept 4</item>
        <item>Concept 5</item>
    </string-array>

    <array name="concept_pics">
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
    </array>

    <string-array name="statues">
        <item>Blogging</item>
        <item>Availible</item>
        <item>Availible</item>
        <item>Availible</item>
        <item>Availible</item>
        <item>Availible</item>
    </string-array>

    <string-array name="concept_type">
        <item>Definition</item>
        <item>Definition</item>
        <item>Definition</item>
        <item>Definition</item>
        <item>Definition</item>
        <item>Definition</item>
    </string-array>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pref_file">com.inredec.preference_file</string>
    <string name="pref_user_name">com.inredec.preference_user_name</string>
    <string name="pref_login_status">com.inredec.preference_login_status</string>

    <string name="action_settings">settings</string>
    <string name="lesson_name">Lesson name:</string>
    <string name="aa_description">Lesson description</string>
    <string name="quiz_answer1">Answer 1</string>
    <string name="quiz_answer2">Answer 2</string>
    <string name="quiz_answer3">Answer 3</string>
    <string name="quiz_answer4">Answer 4</string>

    <string name="title_activity_main_fullscreen">MainFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="help_title">AYUDA</string>
    <string name="tex1_help">Esta sección es una descripción ràpida de las funcionalidades de ATutor.
                            En el meú principal existen cinco secciones diferenciadas a las que poder acceder:
                            LECCIONES, CONCEPTOS, OPCIONES, PERFIL Y AYUDA. </string>
    <string name="tex1_help_lessons">Al hacer click en el botón LECCIONES el usuario podrá acceder a las diferentes lecciones del curso. Las lecciones se presentan a modo de lista y al hacer click en cada uno de los elementos de la lista se podrá acceder al contenido de la lección. Al final de cada lección está el enlace para acceder al cuestionario de autoevaluación correspondiente.</string>
    <string name="tex1_help_concepts">En esta sección se pueden consultar conceptos concretos sobre este curso. Se trata de definiciones concretas. Al entrar aparece un listado con los cenceptos existentes, también se puede utilizar el buscador para buscar uno en concreto.</string>
    <string name="tex1_help_options">En esta sección se encuentran los parámetros de configuracion de la aplicación. En este apartado se encuentra la selección del idioma de los cursos. Actualmente son selecionables el Catalan, Español e Inglés. Se irán añadiendo otro idiomas progresivamente.</string>
    <string name="tex1_help_profile">En esta sección podemos consular los datos de usuario, incluyendo la nota media de los cuestionarios de autoevaluación. Esta sección incluye un apartado para contactar con el autor de la aplicación. No dude en contactar con el autor para cualquier sugerencia, reporte de fallo o comentario que quiera realizar.</string>
    <string name="tex1_help_about">El desarrollo de esta aplicación forma parte de un Trabajo de Fin de Grado de Tecnocampus Escola Superior Politècnica, centro adscrito a UPF. Autor: Alejandro J. Flores Cumella - 2019.</string>
    <string name="contact_scrn_title">Contacta con el autor</string>
    <string name="contact_scn_subject">Asunto:</string>
    <string name="contact_scn_message">Mensaje:</string>
    <string name="contact_scn_from">¿Tienes alguna duda o sugerencia acerca de ATutor? Rellena el formulario que aparece a continuación. </string>
    <string name="search_in_list">Buscar...</string>
    <string name="etail_lesson_title">Lesson Title</string>
    <string name="bt_questionary">Cuestionario</string>
    <string name="questionary_title">Responde las preguntas</string>
    <string name="contact_user_dt_tittle">Datos de usuario</string>
    <string name="report_sourse">Informe</string>


</resources>
