<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/library_transparente">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="590dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:src="@drawable/logoatutor3"
            />

        <TextView
            android:id="@+id/tv_helpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/tv_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tex1_help"
            android:layout_gravity="center_vertical|end"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="italic"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="221dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:paddingTop="10dp"
            android:src="@drawable/btlecciones_blk"/>

        <TextView
            android:id="@+id/tv_text2_lecciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tex1_help_lessons"
            android:layout_gravity="center_vertical|end"
            android:gravity="left"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="221dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:paddingTop="10dp"
            android:src="@drawable/btconceptosblk"/>

        <TextView
            android:id="@+id/tv_text2_conceptos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tex1_help_concepts"
            android:layout_gravity="center_vertical|end"
            android:gravity="left"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="221dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:paddingTop="10dp"
            android:src="@drawable/btsettings_blk"/>

        <TextView
            android:id="@+id/tv_text2_opciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tex1_help_options"
            android:layout_gravity="center_vertical|end"
            android:gravity="left"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="221dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:paddingTop="10dp"
            android:src="@drawable/btperfil_blk"/>

        <TextView
            android:id="@+id/tv_text2_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tex1_help_profile"
            android:layout_gravity="center_vertical|end"
            android:gravity="left"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />
        <TextView
            android:id="@+id/tv_text2_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tex1_help_about"
            android:layout_gravity="center_vertical|end"
            android:gravity="center"
            android:textSize="12sp"
            android:paddingTop="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="25dp"
            android:textStyle="italic|bold"
            />

        <TextView
            android:id="@+id/tv_text2_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="."
            android:layout_gravity="center_vertical|end"
            android:gravity="center"
            android:textSize="12sp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="25dp"

            />
    </LinearLayout>


</ScrollView>

